[project]
name = "hello-world"
version = "0.1.0"
description = "A simple hello world project for testing coding agents"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"